{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 33,
  "lineage": "4f099381-f452-fda9-9118-2e463875b70d",
  "resources": [
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787737882635:security-group/sg-010b8b31bd5e2a4de",
            "description": "Allow inbound traffic from app layer (EC2 SG) to DB.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010b8b31bd5e2a4de",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow DB traffic from Compute Layer",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09c78df2972531220"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mvp-bootcamp-project-db-sg",
            "name_prefix": "",
            "owner_id": "787737882635",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-db-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f77e5d272d04c72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.microservice_app.aws_security_group.app_sg",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.microservice_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787737882635:security-group/sg-09c78df2972531220",
            "description": "Allow inbound traffic for the microservice and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c78df2972531220",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Microservice Port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mvp-bootcamp-project-sg",
            "name_prefix": "",
            "owner_id": "787737882635",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f77e5d272d04c72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b638cb9f930e1f6",
            "arn": "arn:aws:ec2:us-east-1:787737882635:elastic-ip/eipalloc-00b638cb9f930e1f6",
            "association_id": "eipassoc-00f6fd8170776ecff",
            "domain": "vpc",
            "id": "eipalloc-00b638cb9f930e1f6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02bd86bba9c610526",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-13-216-8-109.compute-1.amazonaws.com",
            "public_ip": "13.216.8.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mvp-bootcamp-project-nat-eip-1"
            },
            "tags_all": {
              "Name": "mvp-bootcamp-project-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035887b2266c2f825",
            "arn": "arn:aws:ec2:us-east-1:787737882635:elastic-ip/eipalloc-035887b2266c2f825",
            "association_id": "eipassoc-0cb5d0963a19b969b",
            "domain": "vpc",
            "id": "eipalloc-035887b2266c2f825",
            "network_border_group": "us-east-1",
            "network_interface": "eni-038f36bac7dccfe58",
            "private_dns": "ip-10-0-2-61.ec2.internal",
            "private_ip": "10.0.2.61",
            "public_dns": "ec2-52-204-202-30.compute-1.amazonaws.com",
            "public_ip": "52.204.202.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mvp-bootcamp-project-nat-eip-2"
            },
            "tags_all": {
              "Name": "mvp-bootcamp-project-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787737882635:internet-gateway/igw-0e526a760694b8735",
            "id": "igw-0e526a760694b8735",
            "owner_id": "787737882635",
            "tags": {
              "Name": "mvp-bootcamp-project-igw"
            },
            "tags_all": {
              "Name": "mvp-bootcamp-project-igw"
            },
            "vpc_id": "vpc-03f77e5d272d04c72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b638cb9f930e1f6",
            "association_id": "eipassoc-00f6fd8170776ecff",
            "connectivity_type": "public",
            "id": "nat-007602d39374065db",
            "network_interface_id": "eni-02bd86bba9c610526",
            "private_ip": "10.0.1.103",
            "public_ip": "13.216.8.109",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ca91218d3f30ba27",
            "tags": {
              "Name": "mvp-bootcamp-project-nat-gw-1"
            },
            "tags_all": {
              "Name": "mvp-bootcamp-project-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035887b2266c2f825",
            "association_id": "eipassoc-0cb5d0963a19b969b",
            "connectivity_type": "public",
            "id": "nat-0df6d39593651ee1c",
            "network_interface_id": "eni-038f36bac7dccfe58",
            "private_ip": "10.0.2.61",
            "public_ip": "52.204.202.30",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0849b4608c1301ee1",
            "tags": {
              "Name": "mvp-bootcamp-project-nat-gw-2"
            },
            "tags_all": {
              "Name": "mvp-bootcamp-project-nat-gw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787737882635:route-table/rtb-01f1ee5c671be6d90",
            "id": "rtb-01f1ee5c671be6d90",
            "owner_id": "787737882635",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e526a760694b8735",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mvp-bootcamp-project-public-rt"
            },
            "tags_all": {
              "Name": "mvp-bootcamp-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f77e5d272d04c72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdad97ae6549d32d",
            "route_table_id": "rtb-01f1ee5c671be6d90",
            "subnet_id": "subnet-0ca91218d3f30ba27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dd2661729a222fe",
            "route_table_id": "rtb-01f1ee5c671be6d90",
            "subnet_id": "subnet-0849b4608c1301ee1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787737882635:subnet/subnet-0f9254bedcaba0ce3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9254bedcaba0ce3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787737882635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-private-subnet-1",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-private-subnet-1",
              "Tier": "Private"
            },
            "vpc_id": "vpc-03f77e5d272d04c72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787737882635:subnet/subnet-0116ba506c33c9a37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0116ba506c33c9a37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787737882635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-private-subnet-2",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-private-subnet-2",
              "Tier": "Private"
            },
            "vpc_id": "vpc-03f77e5d272d04c72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787737882635:subnet/subnet-0ca91218d3f30ba27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca91218d3f30ba27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787737882635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-public-subnet-1",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-public-subnet-1",
              "Tier": "Public"
            },
            "vpc_id": "vpc-03f77e5d272d04c72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787737882635:subnet/subnet-0849b4608c1301ee1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0849b4608c1301ee1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787737882635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-public-subnet-2",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-public-subnet-2",
              "Tier": "Public"
            },
            "vpc_id": "vpc-03f77e5d272d04c72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787737882635:vpc/vpc-03f77e5d272d04c72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ab4c4126572d7642",
            "default_route_table_id": "rtb-0f76b213774c92359",
            "default_security_group_id": "sg-0960ae7664a62f02b",
            "dhcp_options_id": "dopt-0bdbbc7e17c613dbc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03f77e5d272d04c72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f76b213774c92359",
            "owner_id": "787737882635",
            "tags": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mvp-bootcamp-project-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}